--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tech2etc Ecommerce Tutorial</title>
+    <title>Inkar E-commerce</title>
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
@@ -115,66 +115,80 @@
           <span>special offers</span>
         </p>
       </div>
-      <div class="form">
-        <input type="text" placeholder="Your email address" />
-        <button class="normal">Sign Up</button>
-      </div>
+      <form class="form">
+        <input type="text" placeholder="Your email address" required />
+        <button class="normal signUp">Sign Up</button>
+      </form>
     </section>
 
     <footer class="section-p1">
       <div class="col">
         <img src="img/logo.png" alt="" class="logo" />
         <h4>Contact</h4>
-        <p>
-          <strong>Address:</strong> 562 Wellington Road, Street 32, San
-          Francisco
-        </p>
-        <p><strong>Phone:</strong> +01 2222 365/(+91)01 2345 6789</p>
+        <p><strong>Address:</strong> Almaty , Almaty Street 1</p>
+        <p><strong>Phone:</strong> +7-705-123-14-56</p>
         <p><strong>Hours:</strong>10:00 - 18:00 , Mon - Sat</p>
+      </div>
 
-        <div class="follow">
-          <h4>Follow Us</h4>
-          <div class="icon">
-            <i class="fab fa-facebook-f"></i>
-            <i class="fab fa-twitter"></i>
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-pinterest-p"></i>
-            <i class="fab fa-youtube"></i>
-          </div>
+      <div class="follow">
+        <h4>Follow Us</h4>
+        <div class="icon">
+          <a href="https://www.facebook.com/" target="_blank"
+            ><i class="fab fa-facebook-f"></i
+          ></a>
+
+          <a href="https://twitter.com/" target="_blank">
+            <i class="fab fa-twitter"></i
+          ></a>
+
+          <a href="https://www.instagram.com/" target="_blank">
+            <i class="fab fa-instagram"></i
+          ></a>
+
+          <a href="https://ru.pinterest.com/" target="_blank">
+            <i class="fab fa-pinterest-p"></i
+          ></a>
+
+          <a href="https://www.youtube.com/" target="_blank">
+            <i class="fab fa-youtube"></i
+          ></a>
         </div>
-      </div>
-
-      <div class="col">
-        <h4>About</h4>
-        <a href="#">About us</a>
-        <a href="#">Delivery Information</a>
-        <a href="#">Privacy policy</a>
-        <a href="#">Terms & conditions</a>
-        <a href="#">Contact us</a>
-      </div>
-
-      <div class="col">
-        <h4>My account</h4>
-        <a href="#">Sign In</a>
-        <a href="#">View Cart</a>
-        <a href="#">My Wishlist</a>
-        <a href="#">Track My Order</a>
-        <a href="#">Help</a>
       </div>
 
       <div class="col install">
         <h4>Install App</h4>
         <p>From App Store or Google Pay</p>
         <div class="row">
-          <img src="img/pay/app.jpg" alt="" />
-          <img src="img/pay/play.jpg" alt="" />
+          <a href="https://www.apple.com/app-store/" target="_blank">
+            <img src="img/pay/app.jpg" alt=""
+          /></a>
+
+          <a
+            href="https://play.google.com/store/games?hl=ru&gl=US&pli=1"
+            target="_blank"
+          >
+            <img src="img/pay/play.jpg" alt=""
+          /></a>
         </div>
         <p>Secure Payment Gateaway</p>
-        <img src="img/pay/pay.png" alt="" />
+        <div class="banks">
+          <a href="https://kaspi.kz/" target="_blank">
+            <img src="img/bank/kaspi.jpeg" alt="" />
+          </a>
+          <a href="https://halykbank.kz/" target="_blank">
+            <img src="img/bank/halyk.jpg" alt="" />
+          </a>
+          <a href="https://jusan.kz/" target="_blank">
+            <img src="img/bank/jusan.jpeg" alt="" />
+          </a>
+          <a href="https://eubank.kz/" target="_blank">
+            <img src="img/bank/eurasian.jpg" alt="" />
+          </a>
+        </div>
       </div>
 
       <div class="copyright">
-        <p>2021 , Tech2 etc - HTML CSS Ecommerce Template</p>
+        <p>2023 , Zholdybay Inkar</p>
       </div>
     </footer>
 
