--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tech2etc Ecommerce Tutorial</title>
+    <title>Inkar E-commerce</title>
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
@@ -49,17 +49,17 @@
         <div>
           <li>
             <i class="far fa-map"></i>
-            <p>56 Glassford Street Glassgow G1 1UL New York</p>
+            <p>Almaty , Almaty 1 Street</p>
           </li>
 
           <li>
             <i class="fa fa-envelope"></i>
-            <p>contact@example.com</p>
+            <p>contact@gmail.com</p>
           </li>
 
           <li>
             <i class="fas fa-phone"></i>
-            <p>contact@example.com</p>
+            <p>contact@gmail.com</p>
           </li>
 
           <li>
@@ -70,7 +70,13 @@
       </div>
       <div class="map">
         <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2469.642574608006!2d-1.2666600108229638!3d51.75785911985771!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4876c6a9ef8c485b%3A0xd2ff1883a001afed!2z0J7QutGB0YTQvtGA0LQg0YPQvdC40LLQtdGA0YHQuNGC0LXRgg!5e0!3m2!1sru!2skz!4v1695095317635!5m2!1sru!2skz"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2908.4154043294866!2d76.88970837606279!3d43.200775771127226!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x388368967e2fa855%3A0x2961f68b2be8f57a!2sMEGA%20Alma-Ata!5e0!3m2!1sru!2skz!4v1699022445383!5m2!1sru!2skz"
+          width="600"
+          height="450"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
           width="600"
           height="450"
           style="border: 0"
@@ -85,9 +91,9 @@
       <form action="">
         <span>LEAVE A MESSAGE</span>
         <h2>We love to hear from you</h2>
-        <input type="text" placeholder="Your Name" />
-        <input type="text" placeholder="E-mail" />
-        <input type="text" placeholder="Subject" />
+        <input type="text" placeholder="Your Name" required />
+        <input type="text" placeholder="E-mail" required />
+        <input type="text" placeholder="Subject" required />
 
         <textarea
           name=""
@@ -95,6 +101,7 @@
           cols="30"
           rows="10"
           placeholder="Your Message"
+          required
         ></textarea>
 
         <button class="normal">Submit</button>
@@ -138,66 +145,80 @@
           <span>special offers</span>
         </p>
       </div>
-      <div class="form">
-        <input type="text" placeholder="Your email address" />
-        <button class="normal">Sign Up</button>
-      </div>
+      <form class="form">
+        <input type="text" placeholder="Your email address" required />
+        <button class="normal signUp">Sign Up</button>
+      </form>
     </section>
 
     <footer class="section-p1">
       <div class="col">
         <img src="img/logo.png" alt="" class="logo" />
         <h4>Contact</h4>
-        <p>
-          <strong>Address:</strong> 562 Wellington Road, Street 32, San
-          Francisco
-        </p>
-        <p><strong>Phone:</strong> +01 2222 365/(+91)01 2345 6789</p>
+        <p><strong>Address:</strong> Almaty , Almaty Street 1</p>
+        <p><strong>Phone:</strong> +7-705-123-14-56</p>
         <p><strong>Hours:</strong>10:00 - 18:00 , Mon - Sat</p>
+      </div>
 
-        <div class="follow">
-          <h4>Follow Us</h4>
-          <div class="icon">
-            <i class="fab fa-facebook-f"></i>
-            <i class="fab fa-twitter"></i>
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-pinterest-p"></i>
-            <i class="fab fa-youtube"></i>
-          </div>
+      <div class="follow">
+        <h4>Follow Us</h4>
+        <div class="icon">
+          <a href="https://www.facebook.com/" target="_blank"
+            ><i class="fab fa-facebook-f"></i
+          ></a>
+
+          <a href="https://twitter.com/" target="_blank">
+            <i class="fab fa-twitter"></i
+          ></a>
+
+          <a href="https://www.instagram.com/" target="_blank">
+            <i class="fab fa-instagram"></i
+          ></a>
+
+          <a href="https://ru.pinterest.com/" target="_blank">
+            <i class="fab fa-pinterest-p"></i
+          ></a>
+
+          <a href="https://www.youtube.com/" target="_blank">
+            <i class="fab fa-youtube"></i
+          ></a>
         </div>
-      </div>
-
-      <div class="col">
-        <h4>About</h4>
-        <a href="#">About us</a>
-        <a href="#">Delivery Information</a>
-        <a href="#">Privacy policy</a>
-        <a href="#">Terms & conditions</a>
-        <a href="#">Contact us</a>
-      </div>
-
-      <div class="col">
-        <h4>My account</h4>
-        <a href="#">Sign In</a>
-        <a href="#">View Cart</a>
-        <a href="#">My Wishlist</a>
-        <a href="#">Track My Order</a>
-        <a href="#">Help</a>
       </div>
 
       <div class="col install">
         <h4>Install App</h4>
         <p>From App Store or Google Pay</p>
         <div class="row">
-          <img src="img/pay/app.jpg" alt="" />
-          <img src="img/pay/play.jpg" alt="" />
+          <a href="https://www.apple.com/app-store/" target="_blank">
+            <img src="img/pay/app.jpg" alt=""
+          /></a>
+
+          <a
+            href="https://play.google.com/store/games?hl=ru&gl=US&pli=1"
+            target="_blank"
+          >
+            <img src="img/pay/play.jpg" alt=""
+          /></a>
         </div>
         <p>Secure Payment Gateaway</p>
-        <img src="img/pay/pay.png" alt="" />
+        <div class="banks">
+          <a href="https://kaspi.kz/" target="_blank">
+            <img src="img/bank/kaspi.jpeg" alt="" />
+          </a>
+          <a href="https://halykbank.kz/" target="_blank">
+            <img src="img/bank/halyk.jpg" alt="" />
+          </a>
+          <a href="https://jusan.kz/" target="_blank">
+            <img src="img/bank/jusan.jpeg" alt="" />
+          </a>
+          <a href="https://eubank.kz/" target="_blank">
+            <img src="img/bank/eurasian.jpg" alt="" />
+          </a>
+        </div>
       </div>
 
       <div class="copyright">
-        <p>2021 , Tech2 etc - HTML CSS Ecommerce Template</p>
+        <p>2023 , Zholdybay Inkar</p>
       </div>
     </footer>
 
